=====================
Plugs Change Log
=====================

0.1.2 Version
-----------------

#. Improve forum upload filename convert process, add ``alt=`` to download href, so 
   that the download filename will use alt value.
#. Fix pnotify inc_show_message js bug, change ``top.$(window)`` to ``$(top.window)``
#. Upgrade pnotify to 1.2.0
#. Add backbone and underscore to plugs.ui.js.jsutils, and you can use::

    {{use "backbone""}}
    
   to use backbone.
#. Add AngularJS in 'plugs.ui.angularjs', and you can use::

    {{use "angularjs"}}
#. Add font-awesome support in 'plugs.ui.bootstrap', and you can use::

    {{use "fontawesome"}}
    
#. Fix fontawesome confict with bootstrap icon class
#. Upgrade bootstrap to 2.0.4